@@ -1,0 +1,55 @@
+<!DOCTYPE html>
+<head>
+<script type='application/ld+json'>
+{"@context": "https://schema.org", "@graph": [{"@type": "Article", "headline": "\u97d3\u6d41\u5929\u5718\u5927\u56de\u6b78\uff01MONSTA X\u3001\u9632\u5f48\u5c11\u5e74\u5718\u3001GOT7\u7b49\u6210\u54e1\u9000\u4f0d\u6a02\u58c7\u91cd\u805a", "description": "\u97d3\u6d41\u5929\u5718\u5927\u56de\u6b78\uff01MONSTA X\u3001\u9632\u5f48\u5c11\u5e74\u5718\u3001GOT7\u7b49\u6210\u54e1\u9000\u4f0d\u6a02\u58c7\u91cd\u805a", "url": "https://www.famechos.me/news/\u97d3\u6d41\u5929\u5718\u5927\u56de\u6b78\uff01MONSTA X\u3001\u9632\u5f48\u5c11\u5e74\u5718\u3001GOT7\u7b49\u6210\u54e1\u9000\u4f0d\u6a02\u58c7\u91cd\u805a/", "image": "https://www.famechos.me/images/banner.jpg", "datePublished": "2024-10-05T21:57:39.871119+08:00", "author": {"@type": "Person", "name": "Famechos"}, "publisher": {"@type": "Organization", "name": "Famechos", "url": "https://www.famechos.me"}}, {"@type": "Organization", "name": "Famechos", "url": "https://www.famechos.me", "logo": "https://www.famechos.me/icons/favicon.png"}, {"@type": "WebSite", "name": "Famechos", "url": "https://www.famechos.me"}]}
+</script>
+<link rel="canonical" href="https://www.famechos.me/news/韓流天團大回歸！MONSTA X、防彈少年團、GOT7等成員退伍樂壇重聚/"/>
+<meta name="description" content="韓流天團大回歸！MONSTA X、防彈少年團、GOT7等成員退伍樂壇重聚，重燃粉絲熱情！最新消息、演唱會情報、回歸計畫全部都在這裡！">
+
+<meta name="keywords" content="韓流天團, 大回歸, MONSTA X, 防彈少年團, GOT7, 退伍, 樂壇重聚, KPOP, 韓國流行音樂, 演唱會, 回歸計畫">
+
+        <meta property="og:url" content="https://www.famechos.me/news/韓流天團大回歸！MONSTA X、防彈少年團、GOT7等成員退伍樂壇重聚/" />
+        <meta property="og:title" content="韓流天團大回歸！MONSTA X、防彈少年團、GOT7等成員退伍樂壇重聚" />
+        <meta property="og:description" content="韓流天團大回歸！MONSTA X、防彈少年團、GOT7等成員退伍樂壇重聚" />
+        <meta property="og:image" content="https://www.famechos.me/images/banner.jpg" />
+        <meta property="twitter:card" content="summary_large_image" />
+        <meta property="twitter:title" content="韓流天團大回歸！MONSTA X、防彈少年團、GOT7等成員退伍樂壇重聚" />
+        <meta property="twitter:description" content="韓流天團大回歸！MONSTA X、防彈少年團、GOT7等成員退伍樂壇重聚" />
+        <meta property="twitter:image" content="https://www.famechos.me/images/banner.jpg" />
+	<meta name="theme-color" content="white">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<link rel="stylesheet" href="https://fonts.googleapis.com/earlyaccess/notosanstc.css">
+        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.6.0/css/all.min.css"     integrity="sha512-Kc323vGBEqzTmouAECnVceyQqyqdsSiqLQISBL29aUW4U/M7pSPA/gEUZQqv1cwx4OnYxTxve5UMg5GT6L4JJg==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+        <meta property="og:locale" content="zh_TW" />
+        <meta property="og:site_name" content="Famechos" />
+	<meta property="og:type" content="article" />
+	<meta name="robots" content="index, follow" />
+	<meta name="author" content="Famechos" />
+        <meta name="referrer" content="origin">
+	<meta name="apple-mobile-web-app-capable" content="yes"/>
+        <meta name="apple-mobile-web-app-status-bar-style" content="black"/>
+        <meta name="apple-mobile-web-app-title" content="Avoir"/>
+        <meta name="apple-touch-fullscreen" content="yes"/>
+        
+<style> * {box-sizing: border-box;margin: 0;padding: 0;font-family: 'Noto Sans TC', sans-serif;scroll-behavior: smooth;}</style>
+<h1>韓流天團大回歸！MONSTA X、防彈少年團、GOT7等成員退伍樂壇重聚</h1>
+</head>
+
+<body>
+<iframe width="560" height="315" src="https://www.youtube.com/embed/TCSwGZP8aXg" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+
+<p>近期，多位知名韓國流行音樂藝人完成了義務兵役，準備重返樂壇。MONSTA X的玟赫是首位回歸的成員，他於上週四正式完成兵役。</p>
+<p>MONSTA X共有六名成員，目前只有孫賢佑和玟赫完成了兵役，預計明年全團將會重聚。以下是其他即將退伍的韓國流行音樂藝人：</p>
+<ul>
+<li>邕聖祐（Wanna One成員）：10月16日退伍</li>
+<li>防彈少年團的郑号锡（J-Hope）：10月17日退伍</li>
+<li>GOT7的林在范（Jay B）：11月1日退伍</li>
+<li>GOT7的朴珍荣（Jinyoung）：11月7日退伍</li>
+<li>勝利者的姜昇潤：12月19日退伍</li>
+<li>勝利者的美濃：12月23日退伍</li>
+</ul>
+<p>粉絲們期待著這些團體的新專輯。勝利者已經宣布明年將會全團回歸，而防彈少年團也預計在2025年發行團體專輯，屆時七名成員都將完成兵役。</p>
+
+<p>資料來源： Korea Herald</p>
+</body>
+</html>
