@@ -5,7 +5,7 @@
   <title>Famechos</title>
   <link>https://www.famechos.me/</link>
   <description>Famechos - News Article</description>
-  <lastBuildDate>Sat, 05 Oct 2024 21:56:09 +0800</lastBuildDate>
+  <lastBuildDate>Sat, 05 Oct 2024 21:57:47 +0800</lastBuildDate>
 
   <item>
   <title>G-Dragon終於打破沉默！將在《劉QUIZ ON THE BLOCK》首次亮相，分享BIGBANG歲月、毒品風波和音樂復出計劃</title>
@@ -47,5 +47,10 @@
   <link>https://www.famechos.me/news/SEVENTEEN全新專輯前奏！「SEVENTEEN Street」活動即將登場，25萬粉絲齊聚首爾體驗多感官盛宴/</link>
   <description>SEVENTEEN全新專輯前奏！「SEVENTEEN Street」活動即將登場，25萬粉絲齊聚首爾體驗多感官盛宴</description>
   <pubDate>Sat, 05 Oct 2024 21:56:09 +0800</pubDate>
+</item><item>
+  <title>韓流天團大回歸！MONSTA X、防彈少年團、GOT7等成員退伍樂壇重聚</title>
+  <link>https://www.famechos.me/news/韓流天團大回歸！MONSTA X、防彈少年團、GOT7等成員退伍樂壇重聚/</link>
+  <description>韓流天團大回歸！MONSTA X、防彈少年團、GOT7等成員退伍樂壇重聚</description>
+  <pubDate>Sat, 05 Oct 2024 21:57:47 +0800</pubDate>
 </item></channel>
 </rss>
