@@ -54,4 +54,10 @@
     <ns0:changefreq>weekly</ns0:changefreq>
     <ns0:priority>0.90</ns0:priority>
   </ns0:url>
+<ns0:url>
+    <ns0:loc>https://www.famechos.me/news/韓流天團大回歸！MONSTA X、防彈少年團、GOT7等成員退伍樂壇重聚/</ns0:loc>
+    <ns0:lastmod>2024-10-05T21:57:47+08:00</ns0:lastmod>
+    <ns0:changefreq>weekly</ns0:changefreq>
+    <ns0:priority>0.90</ns0:priority>
+  </ns0:url>
 </ns0:urlset>
