@@ -39,3 +39,4 @@ https://www.koreaherald.com/view.php?ud=20241003050085
 https://www.koreaherald.com/view.php?ud=20241003050216
 https://www.koreaherald.com/view.php?ud=20241004050550
 https://www.koreaherald.com/view.php?ud=20241004050494
+https://www.koreaherald.com/view.php?ud=20241004050492
